bases/datawarehouse/tableau/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tableau
  namespace: datawarehouse
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
    - protocol: TCP
      port: 8850
      targetPort: 8850
      name: tsm
---
apiVersion: v1
kind: Endpoints
metadata:
  name: tableau
  namespace: datawarehouse
subsets:
  - addresses:
      - ip: 10.31.131.4
    ports:
      - port: 80
      - port: 8850
