bases/datawarehouse/tableau/ingress-admin.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tableau-admin.${cluster_name}.${cluster_location}.bink.sh
  namespace: datawarehouse
spec:
  ingressClassName: traefik
  rules:
    - host: tableau-admin.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tableau-admin
                port:
                  number: 8850
  tls:
    - hosts:
        - tableau-admin.${cluster_name}.${cluster_location}.bink.sh
